--- a/www/css/style.css
+++ b/www/css/style.css
@@ -96,7 +96,7 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: var(--spacing-lg);
+    margin-bottom: 0;
 }
 
 .logo {
